--- a/distribution/istio-resources/kubeflow-gateway.yaml
+++ b/distribution/istio-resources/kubeflow-gateway.yaml
@@ -8,7 +8,8 @@ spec:
     istio: ingressgateway
   servers:
   - hosts:
-    - kubeflow.my-cluster.my-domain.com
+    #    - kubeflow.my-cluster.my-domain.com
+    - '*'
     port:
       name: http
       number: 80
