--- a/distribution/argocd-applications/istio-operator.yaml
+++ b/distribution/argocd-applications/istio-operator.yaml
@@ -7,7 +7,8 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/istio/istio'
-    targetRevision: HEAD
+      #    targetRevision: HEAD
+    targetRevision: 1.16.1
     path: manifests/charts/istio-operator
     helm:
       parameters:
