--- a/distribution/oidc-auth/base/oauth2-proxy.yaml
+++ b/distribution/oidc-auth/base/oauth2-proxy.yaml
@@ -68,7 +68,8 @@ spec:
       # - name: extraArgs.skip-oidc-discovery
       #   value: "true"
     repoURL: https://oauth2-proxy.github.io/manifests
-    targetRevision: 4.0.5
+      #targetRevision: 4.0.5
+    targetRevision: 6.8.0
   destination:
     namespace: auth
     server: https://kubernetes.default.svc
