--- a/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
@@ -7,7 +7,8 @@ spec:
   project: default
   source:
     repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 13.0.1
+      #    targetRevision: 13.0.1
+    targetRevision: 13.0.2
     chart: keycloak
     helm:
      parameters:
