--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -11,7 +11,8 @@ spec:
       - name: image.repository
         value: quay.io/oauth2-proxy/oauth2-proxy
       - name: image.tag
-        value: v7.1.3
+        #value: v7.1.3
+        value: v7.4.0
       - name: configSecret.create
         value: "false"
       - name: config.existingSecret
