--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -24,7 +24,8 @@ spec:
       - name: extraArgs.set-xauthrequest
         value: "true"
       - name: extraArgs.cookie-secure
-        value: "true"
+        # value: "true"
+        value: "false"
       - name: extraArgs.cookie-samesite
         value: lax
       - name: extraArgs.cookie-refresh
