--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -14,9 +14,10 @@ spec:
         #value: v7.1.3
         value: v7.4.0
       - name: configSecret.create
-        value: "false"
-      - name: config.existingSecret
-        value: oauth2-proxy
+        #value: "false"
+        value: true
+          #      - name: config.existingSecret
+          #value: oauth2-proxy
       - name: service.portNumber
         value: "4180"
       - name: extraArgs.provider
@@ -24,8 +25,7 @@ spec:
       - name: extraArgs.set-xauthrequest
         value: "true"
       - name: extraArgs.cookie-secure
-        # value: "true"
-        value: "false"
+        value: "true"
       - name: extraArgs.cookie-samesite
         value: lax
       - name: extraArgs.cookie-refresh
