--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -14,10 +14,9 @@ spec:
         #value: v7.1.3
         value: v7.4.0
       - name: configSecret.create
-        #value: "false"
-        value: true
-          #      - name: config.existingSecret
-          #value: oauth2-proxy
+        value: "false"
+      - name: config.existingSecret
+        value: oauth2-proxy
       - name: service.portNumber
         value: "4180"
       - name: extraArgs.provider
