--- a/distribution/istio/istio-spec.yaml
+++ b/distribution/istio/istio-spec.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   profile: default
 #  tag: 1.10.1 # istio/operator
-  tag: 1.14.6
+#  tag: 1.14.6
+  tag: 1.16.2
   hub: docker.io/istio
   meshConfig:
     accessLogFile: /dev/stdout
