--- a/distribution/argocd-applications/istio-operator.yaml
+++ b/distribution/argocd-applications/istio-operator.yaml
@@ -16,7 +16,8 @@ spec:
         value: docker.io/istio
       - name: tag
 #        value: 1.10.1 # istio/operator
-        value: 1.14.6
+#        value: 1.14.6
+        value: 1.16.2
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: istio-operator
