--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -47,16 +47,16 @@ spec:
         value: "*"
       - name: extraArgs.login-url
         #value: "https://auth.my-cluster.my-domain.com/auth/realms/kubeflow/protocol/openid-connect/auth"
-        value: "https://localhost:31170/realms/kubeflow/protocol/openid-connect/auth"
+        value: "http://localhost:18000/realms/kubeflow/protocol/openid-connect/auth"
       - name: extraArgs.redeem-url
         #value: "https://auth.my-cluster.my-domain.com/auth/realms/kubeflow/protocol/openid-connect/token"
-        value: "https://localhost:31170/realms/kubeflow/protocol/openid-connect/token"
+        value: "http://localhost:18000/realms/kubeflow/protocol/openid-connect/token"
       - name: extraArgs.profile-url
         #value: "https://auth.my-cluster.my-domain.com/auth/realms/kubeflow/protocol/openid-connect/userinfo"
-        value: "https://localhost:31170/realms/kubeflow/protocol/openid-connect/userinfo"
+        value: "http://localhost:18000/realms/kubeflow/protocol/openid-connect/userinfo"
       - name: extraArgs.validate-url
         #value: "https://auth.my-cluster.my-domain.com/auth/realms/kubeflow/protocol/openid-connect/userinfo"
-        value: "https://localhost:31170/realms/kubeflow/protocol/openid-connect/userinfo"
+        value: "http://localhost:18000/realms/kubeflow/protocol/openid-connect/userinfo"
       - name: extraArgs.scope
         value: email
       - name: extraArgs.scope
