--- a/examples/setup.conf
+++ b/examples/setup.conf
@@ -10,7 +10,7 @@
 <<__subdomain_kubecost__>>=kubecost
 <<__subdomain_ceph__>>=rook-ceph
 <<__subdomain_radosgw__>>=rgw
-<<__oidc.issuer__>>=https://auth.my-cluster.my-domain.com
+<<__oidc.issuer__>>=http://localhost:18000/realms/kubeflow
 <<__oidc.scope__>>=openid profile email
 <<__oidc.user_id_claim__>>=email
 <<__cert_manager.email_user__>>=info
