--- a/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
@@ -7,8 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://charts.bitnami.com/bitnami
-      #    targetRevision: 13.0.1
-    targetRevision: 13.0.2
+    targetRevision: 13.0.1
     chart: keycloak
     helm:
      parameters:
@@ -37,8 +36,7 @@ spec:
       - name: extraEnvVars[0].value
         value: "-Dkeycloak.import=/config/kubeflow-realm.json"
       - name: service.type
-        #value: ClusterIP
-        value: NodePort
+        value: ClusterIP
       - name: service.port
         value: "8080"
       - name: service.httpsPort
