--- a/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/keycloak.yaml
@@ -16,7 +16,8 @@ spec:
       - name: auth.managementUser
         value: manager
       - name: proxyAddressForwarding
-        value: "true"
+        #value: "true"
+        value: "false"
       - name: auth.existingSecret
         value: keycloak-secret
       - name: postgresql.existingSecret
