--- a/distribution/istio-resources/kubeflow-gateway.yaml
+++ b/distribution/istio-resources/kubeflow-gateway.yaml
@@ -15,17 +15,17 @@ spec:
       number: 80
       protocol: HTTP
     # Upgrade HTTP to HTTPS
-    tls:
+    #tls:
       #httpsRedirect: true
-      httpsRedirect: false
-  - hosts:
+      #httpsRedirect: false
+  #- hosts:
     #    - kubeflow.my-cluster.my-domain.com
-    - '*'
-    port:
-      name: https
-      number: 443
-      protocol: HTTPS
-    tls:
-      mode: PASSTHROUGH
+    #- '*'
+    #port:
+      #name: https
+      #number: 443
+      #protocol: HTTPS
+    #tls:
+      #mode: PASSTHROUGH
       #mode: SIMPLE
       #credentialName: kubeflow-ingressgateway-certs
