--- a/distribution/oidc-auth/base/auth-gateway.yaml
+++ b/distribution/oidc-auth/base/auth-gateway.yaml
@@ -14,14 +14,14 @@ spec:
       number: 80
       protocol: HTTP
     # Upgrade HTTP to HTTPS
-    tls:
-      httpsRedirect: true
-  - hosts:
-    - auth.my-cluster.my-domain.com
-    port:
-      name: https
-      number: 443
-      protocol: HTTPS
-    tls:
-      mode: SIMPLE
-      credentialName: auth-ingressgateway-certs
+    #tls:
+      #httpsRedirect: true
+  #- hosts:
+    #- auth.my-cluster.my-domain.com
+    #port:
+      #name: https
+      #number: 443
+      #protocol: HTTPS
+    #tls:
+      #mode: SIMPLE
+      #credentialName: auth-ingressgateway-certs
