--- a/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
+++ b/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-patch.yaml
@@ -22,9 +22,11 @@ spec:
       - name: extraArgs.provider
         value: keycloak
       - name: extraArgs.set-xauthrequest
-        value: "true"
+        #value: "true"
+        value: "false"
       - name: extraArgs.cookie-secure
-        value: "true"
+        #value: "true"
+        value: "false"
       - name: extraArgs.cookie-samesite
         value: lax
       - name: extraArgs.cookie-refresh
