--- a/distribution/kubeflow/kfserving/kustomization.yaml
+++ b/distribution/kubeflow/kfserving/kustomization.yaml
@@ -3,9 +3,13 @@ kind: Kustomization
 
 resources:
 - github.com/kubeflow/kfserving/config/overlays/kubeflow?ref=release-0.5
-
+  #- github.com/kserve/kserve/config/overlays/kubeflow?ref=release-0.10 # tag=v0.10.0
+  
 images:
 - name: gcr.io/kfserving/kfserving-controller
   newName: gcr.io/kfserving/kfserving-controller
   newTag: v0.5.1
-  # digest: sha256:321f35c2cd934d449f9e1308ca45a8c9a92190bec83a33b37a18a6b4b649506a
+  #digest: sha256:321f35c2cd934d449f9e1308ca45a8c9a92190bec83a33b37a18a6b4b649506a
+#- name: docker.io/kserve/kserve-controller
+  #newName: docker.io/kserve/kserve-controller
+  #newTag: v0.10.0
