--- a/distribution/oidc-auth/base/auth-gateway.yaml
+++ b/distribution/oidc-auth/base/auth-gateway.yaml
@@ -8,20 +8,22 @@ spec:
     istio: ingressgateway
   servers:
   - hosts:
-    - auth.my-cluster.my-domain.com
+    #- auth.my-cluster.my-domain.com
+    - '*'
     port:
       name: http
       number: 80
       protocol: HTTP
     # Upgrade HTTP to HTTPS
-    #tls:
-      #httpsRedirect: true
-  #- hosts:
+    tls:
+      httpsRedirect: true
+  - hosts:
     #- auth.my-cluster.my-domain.com
-    #port:
-      #name: https
-      #number: 443
-      #protocol: HTTPS
-    #tls:
-      #mode: SIMPLE
-      #credentialName: auth-ingressgateway-certs
+    - '*'
+    port:
+      name: https
+      number: 443
+      protocol: HTTPS
+    tls:
+      mode: SIMPLE
+      credentialName: auth-ingressgateway-certs
